# meson-slang-bin

./: meson.build  version.txt
include/: slang-tag-version.h
lib/linux/: libslang-rt.so.0.2025.21.2  libslang-rt.so.0.2026.11  libslang-rt.so.0.2026.7.1
lib/win64/: slang-compiler.lib  slang.lib
